# MetaDex

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml
apps/api/: .gitignore  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/data/: loader.py
apps/api/app/seed/: db.py  pokeapi.py  schema.sql  seed.py
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  vite-env.d.ts
