[project]
name = "metadex-api"
version = "0.1.0"
description = "MetaDex API — PokeAPI seeding, DB, and AI orchestration (FastAPI)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
]

[tool.uv]
package = false

[dependency-groups]
dev = []
